apps/management/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: argocd-web
  namespace: argocd

  annotations:
    argocd.argoproj.io/sync-wave: "2"

spec:
  parentRefs:
    - name: argocd-gateway
      sectionName: https-root

  hostnames:
    - "argo.aws-logbeacon.iamridoydey.me"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: argocd-server
          port: 443
